manifest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-rollout-stable
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-rollout-canary
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 8080
  type: ClusterIP
